--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "@whiskeysockets/baileys": "@github:Rikzzmodz/bails",
+  "@whiskeysockets/baileys": "^6.7.0"
+},
     "pino": "^8.0.0"
   },
   "scripts": {
